tests/neg/i10074.scala
class Context
given Context = ???  // ok
given as Context = ???     // error // error // error
